Document Windows PowerShell classpath syntax